# Rawatib_test

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README2.md  SECURITY.md  app_icon.rc.in  build.bat  build.sh  rawatib_installer (2).nsi  resources.qrc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
docs/: GPG_SIGNING.md  RELEASING.md
include/database/: AutoBackupManager.h  DatabaseManager.h  Migrations.h
include/models/: AttendanceRecord.h  Employee.h  PayrollRule.h
include/repositories/: AttendanceRepository.h  DayExceptionRepository.h  EmployeeRepository.h  PayrollRulesRepository.h
include/ui/: AdvancedTab.h  AttendanceTab.h  EmployeePanel.h  MainWindow.h  SalaryTab.h
include/ui/dialogs/: AttendanceDialog.h  AuditLogDialog.h  CurrencyDialog.h  DatabaseUnlockDialog.h  EmployeeDialog.h  ExportAllDialog.h  FirstRunDialog.h  ImportPreviewDialog.h  LicenseDialog.h  LockPolicyDialog.h  PayMonthDialog.h  PayrollRuleDialog.h  PayrollRulesDialog.h  PinDialog.h  TipsDialog.h
include/utils/: AuditLog.h  CurrencyManager.h  DeductionPolicy.h  EmployeePinManager.h  ExportHelper.h  ImportHelper.h  LanguageRegistry.h  LockPolicy.h  PayrollCalculator.h  PinManager.h  PrintHelper.h  SessionManager.h  SettingsManager.h  ThemeHelper.h  UpdateChecker.h
packaging/aur/: PKGBUILD.in  SRCINFO.in
packaging/linux/: com.fakylab.rawatib.metainfo.xml
packaging/windows/: rawatib_installer.nsi
resources/: LICENSE.txt  THIRD_PARTY_LICENSES.txt  app_icon.icns  rawatib.desktop
scripts/: fetch_sqlcipher.sh  generate-aur-metadata.sh  package-linux.sh  package-macos.sh  package-windows.ps1  setup-fakylab-gpg.sh
src/: main.cpp
src/database/: AutoBackupManager.cpp  DatabaseManager.cpp  Migrations.cpp
src/models/: AttendanceRecord.cpp  Employee.cpp
src/repositories/: AttendanceRepository.cpp  DayExceptionRepository.cpp  EmployeeRepository.cpp  PayrollRulesRepository.cpp
src/ui/: AdvancedTab.cpp  AttendanceTab.cpp  EmployeePanel.cpp  MainWindow.cpp  SalaryTab.cpp
src/ui/dialogs/: AttendanceDialog.cpp  AuditLogDialog.cpp  CurrencyDialog.cpp  DatabaseUnlockDialog.cpp  EmployeeDialog.cpp  ExportAllDialog.cpp  FirstRunDialog.cpp  ImportPreviewDialog.cpp  LicenseDialog.cpp  LockPolicyDialog.cpp  PayMonthDialog.cpp  PayrollRuleDialog.cpp  PayrollRulesDialog.cpp  PinDialog.cpp  TipsDialog.cpp
src/utils/: AuditLog.cpp  CurrencyManager.cpp  DeductionPolicy.cpp  EmployeePinManager.cpp  ExportHelper.cpp  ImportHelper.cpp  LanguageRegistry.cpp  LockPolicy.cpp  PayrollCalculator.cpp  PinManager.cpp  PrintHelper.cpp  SessionManager.cpp  SettingsManager.cpp  UpdateChecker.cpp
translations/: README.md  rawatib_ar.ts  rawatib_fr.ts  rawatib_ja.ts  rawatib_ko.ts  rawatib_tr.ts  rawatib_zh.ts
